welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:15: error: '=>' expected but ')' found.
		case nbB >= 3) => gauche()
                             ^